store number in array corectly
String[] array = new String[10];

--- a/res/layout/activity_layout_test.xml
+++ b/res/layout/activity_layout_test.xml
@@ -12,7 +12,8 @@
         android:id="@+id/editText1"
         android:layout_width="248dp"
         android:layout_height="wrap_content"
-        android:ems="10" />
+        android:ems="10"
+        android:textAllCaps="true" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -231,5 +232,11 @@
             android:text="B00611043" />
 
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
 </LinearLayout>
